# barebow_project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FEATURES.md  Home.py  README.md  REVIEW.md  baretrack.spec  debug_validation.py  desktop.py  pyproject.toml  requirements.txt  seed_data.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  weekly-issue-review.lock.yml  weekly-issue-review.md
api/: __init__.py  deps.py  main.py
api/routers/: analysis.py  analytics.py  arrows.py  bows.py  crawls.py  rounds.py  scoring.py  sessions.py  tabs.py
artifacts/docs/: 2026-02-10-documentation-audit.md
artifacts/legacy/: reference-original.md  research-findings-original.md
docs/: getting-started.md  reference.md  research_findings.md  user-guide.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  start-dev.ps1  vite.config.ts
frontend/src/: App.tsx  (+1 more)
installer/: README.md  baretrack.iss
pages/: 1_Equipment_Profile.py  2_Analysis_Lab.py  3_Session_Logger.py  4_History.py  5_Crawl_Manager.py  6_Analytics.py  7_Tuning_Wizard.py
scripts/: build-desktop.ps1  build-installer.ps1  generate_icon.py
src/: analysis.py  crawls.py  db.py  models.py  park_model.py  physics.py  precision.py  rounds.py  scoring.py
tests/: conftest.py  test_api_analysis.py  test_api_analytics.py  test_api_arrows.py  test_api_bows.py  test_api_crawls.py  test_api_rounds.py  test_api_scoring.py  test_api_sessions.py  test_api_tabs.py  test_crawls.py  test_models.py  test_park_model.py  test_physics.py  test_precision.py  test_rounds.py
(+63 files in other folders)
