[project]
name = "baretrack"
version = "1.0.2"
description = "Barebow archery analysis, scoring, and equipment management"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"api/**/*.py" = ["B008"]  # Depends() / Query() / File() in defaults is idiomatic FastAPI

[tool.ruff.lint.isort]
known-first-party = ["src", "api"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
